Made Generic extension methods, Fixed OpenCV tables, Fixed Fits import, Added Fits to demo,

--- a/Gstc.Imaging.Demo/MainWindow.xaml
+++ b/Gstc.Imaging.Demo/MainWindow.xaml
@@ -19,6 +19,10 @@
             <local:OpenCvTest></local:OpenCvTest>
         </TabItem>
 
+        <TabItem Header="Fits">
+            <local:FitsControl></local:FitsControl>
+        </TabItem>
+
     </TabControl>
 </Window>
 
